v4l2_VDA: fix a deadlock that can happen when switching resolutions

The root cause of the deadlock is this:

ServiceDeviceTask() and DevicePollTask() are meant to run in sequence
and activate one another. But, they run from different threads.
Normally, StartDevicePoll() schedules a call to DevicePollTask(),
which then in turn schedules ServiceDeviceTask(), which schedules
DevicePollTask() again and they continue like this.

When switching resolutions, there is an interesting chain of events:
1) ServiceDeviceTask() schedules DevicePollTask()
2) DevicePollTask() now runs in the other thread in parallel to
   ServiceDeviceTask()
3) DevicePollTask() schedules ServiceDeviceTask()
4) the previous ServiceDeviceTask() at the same time calls
   StartResolutionChange() before returning
5) StartResolutionChange() causes the thread that runs DevicePollTask()
   to get restarted by calling StopDevicePoll() & StartDevicePoll()
6) StartDevicePoll() schedules DevicePollTask()
7) ServiceDeviceTask() returns and runs again because it was scheduled
   earlier in (3)
8) ServiceDeviceTask() schedules DevicePollTask()
-> At this point we've ended up with 2 scheduled calls to DevicePollTask(),
which are going to schedule 2 calls to ServiceDeviceTask() and so forth,
which leads to problems.

The deadlock situation happens when at some point ServiceDeviceTask()
schedules DevicePollTask() with poll_device=false because there are no
input or output buffers available, but then the next ServiceDeviceTask()
(which runs immediately because there are always 2 of them scheduled)
gets an output buffer and schedules DevicePollTask with poll_device=true.
At this point, the state of the VDA is such that it is waiting for an event
from the v4l device, but DevicePollTask() has called poll() without the
device fd, and therefore the event is never received.

The solution that is implemented in this patch is basically to break
the chain of calls when |device_poll_thread_| restarts. This is achieved
by binding a WeakPtr to |this| on the scheduled call to ServiceDeviceTask()
at event (3) in the above example and then invalidating this WeakPtr
through its WeakPtrFactory in StopDevicePoll(). This way, at event (7),
ServiceDeviceTask() will not run again because the WeakPtr will be invalid
and the base::Bind() mechanism will simply skip the call.

Bug: 781222
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I251fab91f80404659309bcd3cb9554e6a727cf52